# docs/30-protocol/openapi/src/gateway.yaml
@@ -36,12 +36,20 @@ paths:
       responses:
         '200':
           $ref: './json-api.yaml#/components/responses/Healthy'
+        '400':
+          $ref: './json-api.yaml#/components/responses/BadRequest'
         '401':
           $ref: './json-api.yaml#/components/responses/Unauthenticated'
         '406':
           $ref: './json-api.yaml#/components/responses/NotAcceptable'
+        '415':
+          $ref: './json-api.yaml#/components/responses/UnsupportedMediaType'
         '500':
           $ref: './json-api.yaml#/components/responses/InternalError'
+        '502':
+          $ref: './json-api.yaml#/components/responses/OutcomeUnknown'
+        '503':
+          $ref: './json-api.yaml#/components/responses/UpstreamUnavailable'
   /_probe/identity:
     get:
       operationId: probeIdentity
